--- a/bioSite.css
+++ b/bioSite.css
@@ -127,3 +127,14 @@ figcaption {
   object-fit: fill;     
   object-position: center; 
 }
+
+.profile, .bio {
+  display: inline-block;
+  vertical-align: top; /* Aligns them on the top */
+  margin-right: 20px; /* Adds space between the two */
+}
+
+.profile img {
+  width: 70%;             
+  height: 70%;   
+}
